--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vikrant Kamble - Economics PhD Candidate</title>
   <style>
-    /* Previous styles remain the same until content section */
+    /* Root Variables with Breakpoints */
     :root {
       --primary-color: #2F3E56;
       --secondary-color: #4A6FA5;
@@ -14,8 +14,11 @@
       --nav-color: #1a1a2e;
       --link-color: #3498db;
       --header-height: 180px;
+      --content-width: min(calc(100% - 2rem), 1200px);
+      --spacing-unit: 1rem;
     }
 
+    /* Reset and Base Styles */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -23,6 +26,7 @@
     }
 
     html {
+      font-size: 16px; /* Base font size for rem units */
       scroll-behavior: smooth;
       scroll-padding-top: var(--header-height);
     }
@@ -32,42 +36,62 @@
       line-height: 1.6;
       color: var(--text-color);
       background-color: var(--background-color);
+      overflow-x: hidden; /* Prevent horizontal scroll */
     }
 
+    /* Responsive Typography */
+    @media (max-width: 768px) {
+      html {
+        font-size: 14px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      html {
+        font-size: 12px;
+      }
+    }
+
+    /* Header Styles */
     .header-container {
       position: fixed;
       top: 0;
       left: 0;
       right: 0;
       background-color: var(--background-color);
-      padding: 1.5cm 0 0;
+      padding: clamp(1rem, 3vw, 1.5cm) 0 0;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       z-index: 1000;
       height: var(--header-height);
+      transition: all 0.3s ease;
     }
 
     .title-section {
       text-align: center;
-      font-size: 2em;
+      font-size: clamp(1.5rem, 4vw, 2rem);
       font-weight: 700;
       color: var(--primary-color);
       letter-spacing: 0.5px;
+      padding: 0 1rem;
     }
 
     .subtitle-section {
       text-align: center;
-      font-size: 1.1em;
+      font-size: clamp(0.9rem, 2.5vw, 1.1rem);
       color: var(--secondary-color);
-      margin: 8px 0 1cm;
+      margin: 8px 0 clamp(0.5rem, 2vw, 1cm);
       letter-spacing: 0.3px;
+      padding: 0 1rem;
     }
 
+    /* Responsive Navigation */
     .navbar {
       background-color: var(--nav-color);
       display: flex;
       justify-content: center;
-      padding: 15px 0;
-      width: min(calc(100% - 16cm), 1200px);
+      flex-wrap: wrap;
+      padding: clamp(0.5rem, 2vw, 15px) 0;
+      width: var(--content-width);
       margin: 0 auto;
       border-radius: 4px;
     }
@@ -75,12 +99,13 @@
     .navbar a {
       color: #ffffff;
       text-decoration: none;
-      margin: 0 25px;
+      margin: clamp(0.25rem, 1vw, 0.8rem) clamp(0.5rem, 2vw, 25px);
       font-weight: 600;
-      font-size: 1.1em;
+      font-size: clamp(0.9rem, 2.5vw, 1.1rem);
       transition: all 0.3s ease;
       padding: 5px 10px;
       border-radius: 3px;
+      white-space: nowrap;
     }
 
     .navbar a:hover {
@@ -88,227 +113,157 @@
       transform: translateY(-1px);
     }
 
-    /* Modified Content Section for Scrolling */
+    /* Content Layout */
     .content {
-      max-width: min(calc(100% - 16cm), 1200px);
+      width: var(--content-width);
       margin: var(--header-height) auto 0;
-      padding: 20px 40px;
+      padding: clamp(1rem, 3vw, 2rem);
     }
 
-    /* Modified Section Display for Scrolling */
+    /* Responsive Sections */
     .section {
       min-height: calc(100vh - var(--header-height));
-      padding: 2rem 0;
+      padding: clamp(1rem, 3vw, 2rem) 0;
       opacity: 1;
       transition: opacity 0.3s ease;
     }
 
-    /* Profile Section */
+    /* Responsive Profile Photo */
     .profile-photo {
       display: block;
-      margin: 0 auto 2cm;
-      width: 250px;
+      width: min(250px, 60vw);
       height: auto;
+      margin: 0 auto clamp(1rem, 4vw, 2cm);
       border-radius: 50%;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease;
     }
 
-    .profile-photo:hover {
-      transform: scale(1.02);
-    }
-
-    /* Typography remains the same */
+    /* Responsive Typography */
     h1 {
-      color: var(--primary-color);
-      font-size: 2em;
-      margin-bottom: 1em;
+      font-size: clamp(1.5rem, 4vw, 2rem);
+      margin-bottom: clamp(1rem, 3vw, 1.5rem);
       text-align: center;
+      color: var(--primary-color);
     }
 
     h2 {
+      font-size: clamp(1.3rem, 3.5vw, 1.8rem);
+      margin: clamp(1rem, 3vw, 1.5rem) 0;
       color: var(--primary-color);
-      font-size: 1.8em;
-      margin: 1.5em 0 1em;
       border-bottom: 2px solid var(--secondary-color);
       padding-bottom: 0.3em;
     }
 
     h3 {
+      font-size: clamp(1.1rem, 3vw, 1.4rem);
+      margin: clamp(0.8rem, 2vw, 1.2rem) 0;
       color: var(--secondary-color);
-      font-size: 1.4em;
-      margin: 1.2em 0 0.8em;
     }
 
     p {
-      margin-bottom: 1.2em;
+      font-size: clamp(0.9rem, 2.5vw, 1rem);
+      margin-bottom: 1rem;
       line-height: 1.8;
-      color: var(--text-color);
     }
 
-    /* Links and other styles remain the same */
-    a {
-      color: var(--link-color);
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-
-    a:hover {
-      color: var(--secondary-color);
-      text-decoration: underline;
-    }
-
+    /* Responsive Lists */
     ul {
-      margin: 1em 0;
-      padding-left: 2em;
+      margin: 1rem 0;
+      padding-left: clamp(1rem, 4vw, 2rem);
     }
 
     li {
-      margin-bottom: 0.8em;
+      margin-bottom: clamp(0.5rem, 2vw, 0.8rem);
       line-height: 1.6;
+      font-size: clamp(0.9rem, 2.5vw, 1rem);
     }
 
+    /* Responsive Social Links */
     .social-links {
       text-align: center;
-      margin: 2em 0;
-      padding: 1em 0;
+      margin: clamp(1rem, 4vw, 2rem) 0;
+      padding: clamp(0.5rem, 2vw, 1rem) 0;
       border-top: 1px solid #eee;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: clamp(0.5rem, 2vw, 1rem);
     }
 
     .social-links a {
       display: inline-block;
-      margin: 0 15px;
-      padding: 8px 16px;
+      padding: clamp(0.5rem, 2vw, 0.8rem) clamp(0.8rem, 3vw, 1rem);
       border-radius: 4px;
       background-color: var(--primary-color);
       color: white;
       font-weight: 600;
       transition: all 0.3s ease;
+      font-size: clamp(0.8rem, 2vw, 1rem);
     }
 
-    .social-links a:hover {
-      background-color: var(--secondary-color);
-      transform: translateY(-2px);
-      text-decoration: none;
+    /* Device-specific adjustments */
+    @media (max-width: 1024px) {
+      :root {
+        --content-width: min(calc(100% - 4rem), 800px);
+      }
     }
 
-    /* Responsive Design */
     @media (max-width: 768px) {
       :root {
         --header-height: 220px;
-      }
-
-      .header-container {
-        padding-top: 1cm;
+        --content-width: calc(100% - 2rem);
       }
 
       .navbar {
-        width: 95%;
-        flex-wrap: wrap;
+        padding: 0.5rem;
+      }
+
+      .social-links {
+        flex-direction: row;
+        justify-content: center;
+      }
+    }
+
+    @media (max-width: 480px) {
+      :root {
+        --header-height: 200px;
       }
 
       .navbar a {
-        margin: 5px 10px;
+        padding: 4px 8px;
+        margin: 4px;
       }
 
       .content {
-        width: 95%;
-        padding: 15px;
+        padding: 1rem;
+      }
+    }
+
+    /* Print styles */
+    @media print {
+      .header-container {
+        position: static;
+        box-shadow: none;
       }
 
-      .profile-photo {
-        width: 200px;
+      .navbar {
+        display: none;
       }
 
-      h1 { font-size: 1.8em; }
-      h2 { font-size: 1.6em; }
-      h3 { font-size: 1.3em; }
+      .content {
+        margin-top: 0;
+      }
+
+      a {
+        text-decoration: none;
+        color: var(--text-color);
+      }
+
+      .social-links {
+        display: none;
+      }
     }
   </style>
 </head>
-<body>
-  <!-- Header Container -->
-  <div class="header-container">
-    <div class="title-section">Vikrant V. Kamble</div>
-    <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
-    <nav class="navbar">
-      <a href="#home">Home</a>
-      <a href="#research">Research</a>
-      <a href="#teaching">Teaching</a>
-      <a href="#resources">Resources</a>
-    </nav>
-  </div>
-
-  <!-- Content -->
-  <div class="content">
-    <!-- Home Section -->
-    <section id="home" class="section">
-      <img src="pic1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
-      <h1>Welcome! My name is Vikrant.</h1>
-      <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
-      <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
-      <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
-      <div class="social-links">
-        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en" target="_blank">Google Scholar</a>
-        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
-        <a href="https://x.com/Vikrant_V_" target="_blank">Twitter</a>
-      </div>
-    </section>
-    
-    <!-- Research Section -->
-    <section id="research" class="section">
-      <h2>Research</h2>
-      <h3>Publications</h3>
-      <p>"Noncustodial parents, instrumental networks, and child support compliance" with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger. <i>Social Science Research</i>, Volume 110, February 2023, 102850</p>
-      <h3>Research in Progress</h3>
-      <ul>
-        <li>Intertemporal Elasticity of Labor Supply for Taxicab drivers: Evidence using a new instrument (USA) (co-authored)</li>
-        <li>Labor Market Consequences of Cycling Program using DiD (Non-USA)</li>
-        <li>Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored)</li>
-        <li>Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored)</li>
-      </ul>
-    </section>
-
-    <!-- Teaching Section -->
-    <section id="teaching" class="section">
-      <h2>Teaching</h2>
-      <h3>Instructor</h3>
-      <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
-      <h3>TA Courses</h3>
-      <p>Graduate Courses:</p>
-      <ul>
-        <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></li>
-      </ul>
-      <p>Undergraduate Courses:</p>
-      <ul>
-        <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
-        <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
-        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></li>
-      </ul>
-    </section>
-
-    <!-- Resources Section -->
-    <section id="resources" class="section">
-      <h2>Resources</h2>
-      <h3>Stata Resources</h3>
-      <ul>
-        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
-        <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
-        <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
-        <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
-      </ul>
-      <h3>LaTeX Resources</h3>
-      <ul>
-        <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
-      </ul>
-      <h3>Data Resources</h3>
-      <ul>
-        <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
-        <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
-        <li><a href="https://fred.stlouisfed.org/" target="_blank">Federal Reserve Economic Data (FRED)</a></li>
-      </ul>
-    </section>
-  </div>
-</body>
-</html>
+<!-- The HTML body remains the same as in the previous version -->
