--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     }
 
     html {
-      font-size: 16px; /* Base font size for rem units */
+      font-size: 16px;
       scroll-behavior: smooth;
       scroll-padding-top: var(--header-height);
     }
@@ -36,7 +36,7 @@
       line-height: 1.6;
       color: var(--text-color);
       background-color: var(--background-color);
-      overflow-x: hidden; /* Prevent horizontal scroll */
+      overflow-x: hidden;
     }
 
     /* Responsive Typography */
@@ -139,7 +139,11 @@
       transition: transform 0.3s ease;
     }
 
-    /* Responsive Typography */
+    .profile-photo:hover {
+      transform: scale(1.02);
+    }
+
+    /* Typography */
     h1 {
       font-size: clamp(1.5rem, 4vw, 2rem);
       margin-bottom: clamp(1rem, 3vw, 1.5rem);
@@ -167,7 +171,7 @@
       line-height: 1.8;
     }
 
-    /* Responsive Lists */
+    /* Lists */
     ul {
       margin: 1rem 0;
       padding-left: clamp(1rem, 4vw, 2rem);
@@ -179,7 +183,19 @@
       font-size: clamp(0.9rem, 2.5vw, 1rem);
     }
 
-    /* Responsive Social Links */
+    /* Links */
+    a {
+      color: var(--link-color);
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    a:hover {
+      color: var(--secondary-color);
+      text-decoration: underline;
+    }
+
+    /* Social Links */
     .social-links {
       text-align: center;
       margin: clamp(1rem, 4vw, 2rem) 0;
@@ -200,6 +216,17 @@
       font-weight: 600;
       transition: all 0.3s ease;
       font-size: clamp(0.8rem, 2vw, 1rem);
+    }
+
+    .social-links a:hover {
+      background-color: var(--secondary-color);
+      transform: translateY(-2px);
+      text-decoration: none;
+    }
+
+    /* Publications and Italics */
+    i {
+      font-style: italic;
     }
 
     /* Device-specific adjustments */
@@ -266,4 +293,74 @@
     }
   </style>
 </head>
-<!-- The HTML body remains the same as in the previous version -->
+<body>
+  <!-- Header Container -->
+  <div class="header-container">
+    <div class="title-section">Vikrant V. Kamble</div>
+    <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
+    <nav class="navbar">
+      <a href="#home">Home</a>
+      <a href="#research">Research</a>
+      <a href="#teaching">Teaching</a>
+      <a href="#resources">Resources</a>
+    </nav>
+  </div>
+
+  <!-- Content -->
+  <div class="content">
+    <!-- Home Section -->
+    <section id="home" class="section">
+      <img src="pic1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
+      <h1>Welcome! My name is Vikrant.</h1>
+      <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
+      <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
+      <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
+      <div class="social-links">
+        <a href="https://scholar.google.com/citations?user=LGHCqEMAAAAJ&hl=en" target="_blank">Google Scholar</a>
+        <a href="https://www.linkedin.com/in/vikrant-vilas-kamble-20779a134/" target="_blank">LinkedIn</a>
+        <a href="https://x.com/Vikrant_V_" target="_blank">Twitter</a>
+      </div>
+    </section>
+    
+    <!-- Research Section -->
+    <section id="research" class="section">
+      <h2>Research</h2>
+      <h3>Publications</h3>
+      <p>"Noncustodial parents, instrumental networks, and child support compliance" with Quentin H. Riser, Daniel R. Meyer, and Lawrence M. Berger. <i>Social Science Research</i>, Volume 110, February 2023, 102850</p>
+      <h3>Research in Progress</h3>
+      <ul>
+        <li>Intertemporal Elasticity of Labor Supply for Taxicab drivers: Evidence using a new instrument (USA) (co-authored)</li>
+        <li>Labor Market Consequences of Cycling Program using DiD (Non-USA)</li>
+        <li>Causal Effects of CTE Pathways and Career Clusters on Secondary and Postsecondary Outcomes (USA) (co-authored)</li>
+        <li>Effect of Medicaid Expansion on Crime in Big Cities (USA) (co-authored)</li>
+      </ul>
+    </section>
+
+    <!-- Teaching Section -->
+    <section id="teaching" class="section">
+      <h2>Teaching</h2>
+      <h3>Instructor</h3>
+      <p>I will be teaching ECON101: Introduction to Microeconomics in Winter 2025.</p>
+      <h3>TA Courses</h3>
+      <p>Graduate Courses:</p>
+      <ul>
+        <li>ECON814 | Macroeconomics Theory II | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+        <li>ECON824 | Econometrics of Cross-Section and Panel Data | Fall 2023, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a></li>
+      </ul>
+      <p>Undergraduate Courses:</p>
+      <ul>
+        <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
+        <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
+        <li>ECON422 | Econometric Methods and Models | Fall 2022, Fall 2023, Spring 2024, Fall 2024 | <a href="https://www.emilylbattaglia.com/" target="_blank">Dr. Emily Battaglia</a> and <a href="https://lerner.udel.edu/faculty-staff-directory/olga-gorbachev/" target="_blank">Dr. Olga Gorbachev</a></li>
+      </ul>
+    </section>
+
+  <script>
+    function showSection(sectionId) {
+      const sections = document.querySelectorAll('.section');
+      sections.forEach(section => section.classList.remove('active'));
+      document.getElementById(sectionId).classList.add('active');
+    }
+  </script>
+</body>
+</html>    
