--- a/index.html
+++ b/index.html
@@ -355,6 +355,30 @@
       </ul>
     </section>
 
+<!-- Resources Section -->
+    <section id="resources" class="section">
+      <h2>Resources</h2>
+      <h3>Stata Resources</h3>
+      <ul>
+        <li><a href="https://www.sscc.wisc.edu/statistics/stata/" target="_blank">University of Wisconsin - Madison</a></li>
+        <li><a href="https://www.princeton.edu/~otorres/Stata/" target="_blank">Princeton University</a></li>
+        <li><a href="https://stats.oarc.ucla.edu/stata/" target="_blank">UCLA Statistical Consulting Group</a></li>
+        <li><a href="https://sociology.fas.harvard.edu/need-help-basic-stata" target="_blank">Harvard University IQSS</a></li>
+      </ul>
+      <h3>LaTeX Resources</h3>
+      <ul>
+        <li><a href="https://www.overleaf.com/latex/templates" target="_blank">Overleaf Templates</a></li>
+      </ul>
+      <h3>Data Resources</h3>
+      <ul>
+        <li><a href="https://www.cdc.gov/nchs/nhis/index.htm" target="_blank">National Health Interview Survey (NHIS)</a></li>
+        <li><a href="https://www.cdc.gov/brfss/index.html" target="_blank">Behavioral Risk Factor Surveillance System (BRFSS)</a></li>
+        <li><a href="https://fred.stlouisfed.org/" target="_blank">Federal Reserve Economic Data (FRED)</a></li>
+      </ul>
+    </section>
+  </div>
+
+  <!-- JavaScript for Tab Navigation -->
   <script>
     function showSection(sectionId) {
       const sections = document.querySelectorAll('.section');
@@ -363,4 +387,4 @@
     }
   </script>
 </body>
-</html>    
+</html>  
