--- a/index.html
+++ b/index.html
@@ -85,33 +85,34 @@
     }
 
     /* Responsive Navigation */
-    .navbar {
-      background-color: var(--nav-color);
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      padding: clamp(0.5rem, 2vw, 15px) 0;
-      width: var(--content-width);
-      margin: 0 auto;
-      border-radius: 4px;
-    }
+.navbar {
+  background-color: transparent; /* No color for navbar */
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: clamp(0.5rem, 2vw, 15px) 0;
+  width: var(--content-width);
+  margin: 0 auto;
+  border-radius: 4px;
+}
 
-    .navbar a {
-      color: #ffffff;
-      text-decoration: none;
-      margin: clamp(0.25rem, 1vw, 0.8rem) clamp(0.5rem, 2vw, 25px);
-      font-weight: 600;
-      font-size: clamp(0.9rem, 2.5vw, 1.1rem);
-      transition: all 0.3s ease;
-      padding: 5px 10px;
-      border-radius: 3px;
-      white-space: nowrap;
-    }
+.navbar a {
+  color: #ffffff;
+  text-decoration: none;
+  margin: clamp(0.25rem, 1vw, 0.8rem) clamp(0.5rem, 2vw, 25px);
+  font-weight: 600;
+  font-size: clamp(0.9rem, 2.5vw, 1.1rem);
+  transition: all 0.3s ease;
+  padding: 5px 10px;
+  border-radius: 3px;
+  white-space: nowrap;
+}
 
-    .navbar a:hover {
-      background-color: rgba(255, 255, 255, 0.1);
-      transform: translateY(-1px);
-    }
+.navbar a:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  transform: translateY(-1px);
+}
+
 
     /* Content Layout */
     .content {
