--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     /* Responsive Navigation */
 .navbar {
-  background-color: rgba(169, 169, 169, 0.2); /* Light grey background */
+  background-color: transparent; /* No background color */
   display: inline-flex; /* Adjust width to match the content */
   justify-content: center;
   flex-wrap: wrap;
@@ -96,7 +96,7 @@
 }
 
 .navbar a {
-  color: #ffffff;
+  color: #000000; /* Black color for the text */
   text-decoration: none;
   margin: clamp(0.25rem, 1vw, 0.8rem) clamp(0.5rem, 2vw, 25px);
   font-weight: 600;
@@ -111,6 +111,7 @@
   background-color: rgba(255, 255, 255, 0.1);
   transform: translateY(-1px);
 }
+
 
 
 
