--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     :root {
       --primary-color: #2F3E56;
       --secondary-color: #4A6FA5;
-      --text-color: #A9CFE2; /* Faint blue color */
+      --text-color: #2C3E50;
       --background-color: #FFFFFF;
       --nav-color: #1a1a2e;
       --link-color: #3498db;
