--- a/index.html
+++ b/index.html
@@ -131,19 +131,20 @@
     }
 
     /* Responsive Profile Photo */
-    .profile-photo {
-      display: block;
-      width: min(250px, 60vw);
-      height: auto;
-      margin: 0 auto clamp(1rem, 4vw, 2cm);
-      border-radius: 50%;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
-    }
+   .profile-photo {
+  display: block;
+  width: min(250px, 60vw); /* Adjusts width */
+  height: auto; /* Allows height to adjust based on the width */
+  margin: 0 auto clamp(1rem, 4vw, 2cm);
+  border-radius: 8px; /* Optional: gives rounded corners for a soft rectangle */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
 
-    .profile-photo:hover {
-      transform: scale(1.02);
-    }
+.profile-photo:hover {
+  transform: scale(1.02);
+}
+
 
     /* Typography */
     h1 {
