--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
     /* Responsive Navigation */
 .navbar {
   background-color: transparent; /* No background color */
-  display: inline-flex; /* Adjust width to match the content */
-  justify-content: center;
-  flex-wrap: wrap;
+  display: flex; /* Switch to flex layout */
+  flex-direction: column; /* Stacks items vertically */
+  justify-content: flex-start; /* Align items to the start (top) */
   padding: clamp(0.5rem, 2vw, 15px) 0;
   margin: 0 auto;
   border-radius: 4px;
@@ -111,7 +111,6 @@
   background-color: rgba(255, 255, 255, 0.1);
   transform: translateY(-1px);
 }
-
 
 
 
