--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   color: #000000; /* Black color for the text */
   text-decoration: none;
   margin: clamp(0.25rem, 1vw, 0.8rem) clamp(0.5rem, 2vw, 25px);
-  font-weight: 600;
+  font-weight: normal; /* Remove boldness */
   font-size: clamp(0.9rem, 2.5vw, 1.1rem);
   transition: all 0.3s ease;
   padding: 5px 10px;
@@ -111,8 +111,6 @@
   background-color: rgba(255, 255, 255, 0.1);
   transform: translateY(-1px);
 }
-
-
 
     /* Content Layout */
     .content {
