--- a/index.html
+++ b/index.html
@@ -89,17 +89,15 @@
 .navbar {
   background-color: transparent; /* No background color */
   display: flex;
-  flex-direction: row; /* Make navbar items horizontal */
+  flex-direction: row; /* Navbar items in a row (horizontal) */
   justify-content: flex-start; /* Align items to the left */
   padding: clamp(0.5rem, 2vw, 15px) 0;
   margin: 0;
   border-radius: 4px;
-  position: sticky; /* Sticky navbar stays at the top */
-  top: 0; /* Aligns it to the top of the page */
-  width: 100%; /* Ensure it spans the full width */
-  z-index: 1000; /* Ensure navbar is on top of content */
+  width: 100%; /* Ensure navbar spans the full width */
+  z-index: 1000; /* Ensure navbar stays above content */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Shadow effect */
-  overflow: hidden; /* Ensures no unwanted scrollbars */
+  overflow: hidden; /* Prevents unwanted scrollbars */
 }
 
 /* Navbar Links */
@@ -120,16 +118,16 @@
   transform: translateY(-1px);
 }
 
-/* Add margin to the content to avoid overlap with the navbar */
+/* Add margin to the content to prevent overlap */
 body {
-  margin-top: 60px; /* Add space at the top to avoid overlap */
+  margin-top: 60px; /* Adds space at the top to prevent overlap with navbar */
 }
 
 /* For smaller screens, adjust the navbar layout */
 @media (max-width: 768px) {
   .navbar {
-    flex-direction: column; /* Stack items vertically on small screens */
-    width: 100%; /* Ensure navbar takes full width on small screens */
+    flex-direction: column; /* Stack navbar items vertically on smaller screens */
+    width: 100%; /* Ensure navbar takes full width */
   }
 }
 
@@ -150,19 +148,22 @@ body {
     }
 
     /* Responsive Profile Photo */
-   .profile-photo {
+/* Profile Image Styles */
+.profile-photo {
   display: block;
-  width: min(250px, 60vw); /* Adjusts width */
-  height: auto; /* Allows height to adjust based on the width */
+  width: min(350px, 80vw); /* Increase the width of the profile image */
+  height: auto; /* Maintain aspect ratio */
   margin: 0 auto clamp(1rem, 4vw, 2cm);
-  border-radius: 8px; /* Optional: gives rounded corners for a soft rectangle */
+  border-radius: 10px; /* Optionally, adjust the border-radius for rounded corners */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
 }
 
+/* Hover effect for profile image */
 .profile-photo:hover {
-  transform: scale(1.02);
+  transform: scale(1.05); /* Slight scale effect on hover */
 }
+
 
 
     /* Typography */
