--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
 .navbar {
   background-color: transparent; /* No background color */
   display: flex;
-  flex-direction: row; /* Navbar items in a row (horizontal) */
+  flex-direction: row; /* Make navbar items horizontal */
   justify-content: flex-start; /* Align items to the left */
   padding: clamp(0.5rem, 2vw, 15px) 0;
   margin: 0;
   border-radius: 4px;
-  width: 100%; /* Ensure navbar spans the full width */
-  z-index: 1000; /* Ensure navbar stays above content */
+  width: 100%; /* Ensure it spans the full width */
+  z-index: 1000; /* Ensure navbar is on top of content */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Shadow effect */
-  overflow: hidden; /* Prevents unwanted scrollbars */
+  overflow-x: auto; /* Allow horizontal scrolling if navbar items overflow */
 }
 
 /* Navbar Links */
@@ -118,19 +118,19 @@
   transform: translateY(-1px);
 }
 
-/* Add margin to the content to prevent overlap */
+/* Add margin to the content to avoid overlap with the navbar */
 body {
-  margin-top: 60px; /* Adds space at the top to prevent overlap with navbar */
+  margin-top: 60px; /* Add space at the top to avoid overlap */
 }
 
 /* For smaller screens, adjust the navbar layout */
 @media (max-width: 768px) {
   .navbar {
-    flex-direction: column; /* Stack navbar items vertically on smaller screens */
-    width: 100%; /* Ensure navbar takes full width */
+    flex-direction: column; /* Stack items vertically on small screens */
+    width: 100%; /* Ensure navbar takes full width on small screens */
+    overflow-y: auto; /* Allow vertical scrolling if needed */
   }
 }
-
 
     /* Content Layout */
     .content {
