--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
   transform: translateY(-1px);
 }
 
-/* Add margin to the content to avoid overlap with the navbar */
+/* Body Margin for No Overlap */
 body {
-  margin-top: 60px; /* Add space at the top to avoid overlap */
+  margin-top: 0; /* Remove top margin to avoid content overlap */
 }
 
 /* For smaller screens, adjust the navbar layout */
@@ -131,6 +131,7 @@ body {
     overflow-y: auto; /* Allow vertical scrolling if needed */
   }
 }
+
 
     /* Content Layout */
     .content {
