--- a/index.html
+++ b/index.html
@@ -340,15 +340,16 @@ body {
 <body>
   <!-- Header Container -->
   <div class="header-container">
-    <div class="title-section">Vikrant V. Kamble</div>
-    <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
-    <nav class="navbar">
-      <a href="#home">Home</a>
-      <a href="#research">Research</a>
-      <a href="#teaching">Teaching</a>
-      <a href="#resources">Resources</a>
-    </nav>
+    <div class="title-section">Vikrant Kamble</div>
+    <div class="subtitle-section">Economics PhD Candidate</div>
   </div>
+
+  <nav class="navbar">
+    <a href="#home">Home</a>
+    <a href="#research">Research</a>
+    <a href="#teaching">Teaching</a>
+    <a href="#resources">Resources</a>
+  </nav>
 
   <!-- Content -->
   <div class="content">
